fix blue square on skill click on mobile

--- a/src/app/(with-footer)/(home)/_sections/SkillsSection/SkillsSection.module.css
+++ b/src/app/(with-footer)/(home)/_sections/SkillsSection/SkillsSection.module.css
@@ -15,6 +15,14 @@
 	justify-content: center;
 }
 
+.skillCard {
+	outline: none;
+}
+
+.skillCard:focus {
+	outline: none;
+}
+
 .skillCardImage {
 	width: 50px;
 	height: 50px;
